# pyash

./: LICENSE  Makefile  README.md  pyproject.toml
pyash/: main.py
tests/: test_pyash.py
