[tool.poetry]
name = "pyash"
version = "0.1.0"
description = "Custom sha256 discarding comments."
authors = ["fabien <fabien@idolum.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = "^7.2.7"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyash = 'pyash.main:main'

